# sqlite_protobuf

./: .gitignore  Dockerfile  build.sh  meson.build
pytests/: pyproject.toml  run_tests.sh
pytests/unit/: utils.py
