[tool.poetry]
name = "pytests"
version = "0.1.0"
description = ""
authors = ["Vykintas Baltrušaitis <vykintas@baltr.lt>"]

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "^3.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
